<resources>
    <!-- APP PARAMETERS -->
    <string name="app_name">Scorpion</string>
    <string name="app_version">v0.5.2.1-beta</string>
    <string name="update_timeout">3600000</string>
    <string name="must_reset_id">sgN3rGJabcwifX63IhbV</string>
    <string name="eula_id">bgH2mOKrOvTgdEpqSY0M</string>

    <!-- LOGIN -->
    <string name="loginHint">Your login</string>
    <string name="passwordHint">Your password</string>
    <string name="login">Sign in</string>
    <string name="error_no_login">Empty login !</string>
    <string name="error_no_password">Empty password !</string>

    <!-- MENU -->
    <string name="action_logout">Se déconnecter</string>
    <string name="action_refresh">Actualiser</string>
    <string name="holidays">Vacances</string>
    <string name="todayButton">Aujourd\'hui</string>
    <string name="toTheLeft"><![CDATA[<]]></string>
    <string name="toTheRight"><![CDATA[>]]></string>
    <string name="action_reset">Effacer la base de données</string>
    <string name="action_go_to_releases">Aller aux releases</string>
    <string name="action_go_to_grades">Notes</string>
    <string name="action_go_to_planning">Planning</string>
    <string name="action_go_to_feedback">Faire un signalement</string>

    <!-- GRADES -->
    <string name="empty_grade">/</string>
    <string name="nav_open">Ouvrir</string>
    <string name="nav_close">Fermer</string>
    <string name="header_title">Header title</string>
    <string name="header_text">Header text</string>

    <!-- EULA -->
    <string name="eula_full">Terms and Conditions</string>
    <string name="license_eula_title">I. Licence</string>
    <string name="license_eula_content">MIT License\n\nCopyright © 2020 LiamAbyss\n\nPermission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.</string>
    <string name="disclaimer_eula_title">II. Disclaimer</string>
    <string name="disclaimer_eula_content">THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.\n\nIN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    <string name="privacy_eula_title">III. Privacy Policy</string>
    <string name="privacy_eula_content">We do not collect any information as you use Scorpion.\n\nYour login, password, name, timetables, grades and any other information will only be stored locally on your smartphone.\n\nIt is your responsibility to ensure the security of this information. You can delete the data from the application at any time in the settings of your smartphone.
    </string>
    <string name="iAgree">I agree to the Terms an Conditions</string>

    <!-- COURSES -->
    <string name="long_date_template">dddd D mmmm YYYY</string>
    <string name="until">Au</string>
    <string name="hour_template">hh:mm</string>
    <string name="at">à</string>
    <string name="from">De</string>
    <string name="status">Statut</string>
    <string name="topic">Matière</string>
    <string name="course_type">Type d\'enseignement</string>
    <string name="description">Description</string>
    <string name="isExam">Est une épreuve</string>
    <string name="room">Salle</string>
    <string name="course">Cours</string>
    <string name="teachers">Intervenants</string>
    <string name="students">Apprenants</string>
    <string name="the">Le</string>

    <!-- CONTACT -->
    <string name="action_go_to_mail">Envoyer un mail</string>
    <string name="scorpion_email_address">scorpion.fast-android@outlook.com</string>
    <string name="email_subject_question">Feedback</string>

    <!-- SVG ANIMATION -->
    <string-array name="scorpion_glyph_strings">
        <item>
M1051 521V462.953c0-126.42-141-179.953-177-106.953-32 59 43 116 105 114C1053 465 1051 558 1051 558Z
        </item>
        <item>
M1015 592s2.12-.75 36-34c.43-28.036-12.7-95.339-72-88-83-1-148.01-74.884-90.627-133-12.615 12.263-88.25 67-53 117 10.648 19.453 47.107 52.925 109 52C1014.5 497.875 1015 592 1015 592Z
        </item>
        <item>
M897 297c-31.373 9.645-51.106 10.9-64 11-100.922-2.031-103.026-47.437-161-45-65.995 1.218-112 46-112 46s12.3-20.531 39-45a394.043 394.043 0 0 0-37 34l-16 17s-5.592 5.724-26 34c43.879-43.643 136.332-60.235 188-62 3.554 8.732-10 32-10 32s33.817 23.375 99 25c12.793 0 51.5-1.136 65-12C874.894 319.41 886.542 307.255 897 297Z
        </item>
        <item>
M533 428c50.326-73.464 91.18-37.759 154-95-13.928 15.669-44.579 49.466-72 61C586.926 408.581 556.5 409.5 533 428Z
        </item>
        <item>
M408 607c-19.836-53.545 7.455-117.981 12-129 28.924-70.245 90.532-138.35 101-142-38.841 54.13-84.689 119.414-84 192-2.479 105.918 113.8 145.275 120 145 18.181 5.1 27 0 27 0s-19.523 19.255-27 28c-27-8.364-68.269-41.663-76-48-11.786-10.646-36.806-38.3-51-62 8.336 64.821 49.939 143.763 92 179 102.692 99.447 317.112 50.434 350 52 198.67-33.783 256.51-9.329 263-10 102.02 24.834 119 118 119 118s-10.51 9.18-34 32c-16.11-68.014-73.75-93.887-78-98-82.62-52.092-287.3-4.454-336-3-179.546 23.261-241.094-11.91-248-13C418.434 800.387 392 622 392 622S399.458 615 408 607Z
        </item>
        <item>
M565 334C527.728 365.628 489.341 410.364 483 425 472.551 452.86 472.834 505.926 481 531 503 513 481 531 503 513 495 480 501 437 507 420 510 411 521.61 372.394 565 334Z
        </item>
        <item>
M219 997c-31.107 26.83-51.6 49.71-59 62-16.809 21.71-17.1 67.35-17 71 5.379-6.05 22.745-20.77 36-25 96.339-56 480.275 52.66 504 54 74.055 21.61 223.9 40.38 284 39 43.78.04 97.13-5.66 130-19 23.56-8.4 69.02-28.22 112-84-35.01 45.22-116.55 61.49-144 64-8.98.94-26.96 2.49-62 4-310.951-19.14-502.549-110.68-693-110-7.121 0-50.162-2.32-82 10-30.167 9.81-49 29-49 29s-.637-22.8 5-37C188.071 1039.55 192.9 1024.98 219 997Z
        </item>
        <item>
M554 316C638.332 183.619 765.669 221.369 839.954 259c13.426 6.8 60.2 28.6 58.813 36.922-2.735 7.976-95.59 32.46-171.407-15.742S554.523 310.63 554.205 316.034Z
        </item>
        <item>
M503.571 513.267c-24.326-118.455 64.514-196.65 125.843-215.6 11.084-3.425 75.893-14.972 79.581-9.62 2.758 5.885-6.546 63.366-101.445 87.452S500.852 510.1 503.571 513.267Z
        </item>
        <item>
M525.345 330.9c-77.556 130.545-39.612 225.723-13.117 248.364s95.1 80.783 69.087 96.2S304 601.626 525.345 330.9Z
        </item>
        <item>
M426.524 588.01c105.463 516.26 728.686 8.564 829.046 342.813C1218.15 403.084 662.965 959.682 426.524 588.01Z
        </item>
        <item>
M1255.57 944.815c-5.39 503.7-910.847-35.743-1079.159 153.045C178.289 724.337 1167.47 1264.23 1255.57 944.815Z
        </item>
   </string-array>
</resources>