<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:id="@+id/navigation_group">
        <item
            android:id="@+id/nav_planning"
            android:icon="@drawable/ic_outline_calendar_today_48"
            android:title="@string/action_go_to_planning" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@drawable/ic_student_male"
            android:title="@string/action_go_to_grades" />
    </group>

    <group android:id="@+id/log_out_group">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_outline_settings_48"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_48"
            android:title="@string/action_logout" />
    </group>
    <group android:id="@+id/project_group" >
        <item
            android:id="@+id/nav_releases"
            android:icon="@drawable/ic_svg_path_1_"
            android:title="@string/action_go_to_releases" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_bullhorn_48"
            android:title="@string/action_go_to_feedback" />
        <item
            android:id="@+id/nav_mail"
            android:icon="@drawable/ic_outline_send_48"
            android:title="@string/action_go_to_mail" />
    </group>

</menu>
