<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsTitleConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/course_padding"
        android:layout_marginTop="@dimen/course_padding"
        android:layout_marginEnd="@dimen/course_padding"
        android:background="@drawable/white_round_corners_background"
        android:elevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/detailsInfoConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/coursesDetailsCourseTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/course_padding"
            android:layout_marginTop="@dimen/course_padding"
            android:layout_marginEnd="@dimen/course_padding"
            android:layout_marginBottom="@dimen/course_padding"
            android:gravity="center_horizontal"
            android:text="@string/course"
            android:textColor="@color/colorContrast"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsInfoConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/course_padding"
        android:layout_marginTop="@dimen/course_padding"
        android:layout_marginEnd="@dimen/course_padding"
        android:background="@drawable/white_round_corners_background"
        android:elevation="5dp"
        app:layout_constrainedHeight="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsTitleConstraintLayout">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/course_padding"
            android:layout_marginTop="@dimen/course_padding"
            android:text="@string/course_type"
            android:textColor="@color/colorContrast"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/description"
            android:textColor="@color/colorContrast"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/coursesDetailsDescriptionTextView"
            app:layout_constraintStart_toStartOf="@+id/textView20"
            app:layout_constraintTop_toTopOf="@+id/coursesDetailsDescriptionTextView" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/course_padding"
            android:layout_marginBottom="@dimen/course_padding"
            android:text="@string/isExam"
            android:textColor="@color/colorContrast"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toBottomOf="@+id/coursesDetailsDescriptionTextView" />

        <TextView
            android:id="@+id/coursesDetailsTypeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/course_detail_padding"
            android:layout_marginEnd="@dimen/course_padding"
            android:text="TextView"
            android:textColor="@color/colorContrast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView20"
            app:layout_constraintTop_toTopOf="@+id/textView20" />

        <TextView
            android:id="@+id/coursesDetailsDescriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/course_padding"
            android:layout_marginEnd="@dimen/course_padding"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:text="TextView"
            android:textColor="@color/colorContrast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/coursesDetailsTypeTextView"
            app:layout_constraintTop_toBottomOf="@+id/coursesDetailsTypeTextView" />

        <TextView
            android:id="@+id/coursesDetailsIsExamTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/course_padding"
            android:text="TextView"
            android:textColor="@color/colorContrast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/coursesDetailsDescriptionTextView"
            app:layout_constraintTop_toTopOf="@+id/textView22" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsParticipantsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/course_padding"
        android:layout_marginTop="@dimen/course_padding"
        android:layout_marginEnd="@dimen/course_padding"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/white_round_corners_background"
        android:elevation="5dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsInfoConstraintLayout">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/course_padding"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/teachers"
                android:textColor="@color/colorContrast"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/students"
                android:textColor="@color/colorContrast"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/course_padding"
            android:layout_marginTop="@dimen/course_padding"
            android:layout_marginEnd="@dimen/course_padding"
            android:layout_marginBottom="@dimen/course_padding"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ScrollView
                android:id="@+id/teachersScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/coursesDetailsTeachersRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:itemCount="3"
                        tools:listitem="@layout/person_listitem" />
                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/coursesDetailsStudentsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/course_padding"
                        tools:itemCount="20"
                        tools:listitem="@layout/person_listitem" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/detailsExitActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:clickable="true"
        android:contentDescription="@string/nav_close"
        android:elevation="10dp"
        android:focusable="true"
        android:longClickable="false"
        android:scaleX=".8"
        android:scaleY=".8"
        android:translationY="5dp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/close_white_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>